Changelog
=========

0.1dev (unreleased)
----------------------

- Allowed base query sources to work with non-string searches by only applying
  the lower() function for queries to strings.  We can add additional types of
  comparison function later if required.
  [David]
- Changed Activities table source to have an integer column as the app_id
  [David]
- Allowed the overriding of reflection-mapped Columns within SQLAlcehmy
  tables within our util methods.  You can pass any number of Column objects
  into the Table() initialisation and have them override an autoload table
  (very useful!).
  [David]
- Changed query source base to allow us to sneak in and get the SQLAlchemy
  query before it returns any wrapped results.  We can now get the query
  and raw results for use within RIF-CS.
  [David]
- Added basic RIF-CS integration, using JPype.  You now need to have JPype
  present for this to all work.
  [David]
- Added invariant to check out dataset dates.
  [David]
- Update to latest version of DGF, updating our widget template and fixing
  our JS for our code fields.
  [David]
- Fix issue with dataset form deleting values from certain fields (like
  keywords etc) - this was due to an issue with caching our getTermByToken
  function.
  [David]
- Stopped using a custom widget for our keywords - we can create a 'fake'
  result for any value the user types into the field in our QuerySource.
  [David]
- Changed various field names in dataset records - this will break backwards
  compatibility.
  [David]
- Made title for data record form same as rest of Plone via CSS and
  adjusted DGF fields.
  [David]
- Created work-around for KSS validation on fields.  All values always validate
  now until further notice.
  [David]
- Added Collection Type and IP field to data record content type
  [David]
- Refactor vocabularies out of our content type
  [David]
- Rework sources logic to let child sources return any SQLAlchemy conditions