@@ -14,6 +14,10 @@ DB_CONNECTIONS = utils.processDatabaseConnections(zope_config)
 JVM_PATH = jpype.getDefaultJVMPath()
 RIFCS_API_LOCATION = zope_config['rifcs-api-location']
 
+RIFCS_KEY = "jcu.edu.au/tdh/%(type)s/%(id)s"
+RIFCS_GROUP = "James Cook University"
+RIFCS_ORIGINATING_SOURCE = "http://www.jcu.edu.au/tdh/"
+
 RIFCS_ACTIVITY_RECORD_NOTE_TEMPLATE = """
 Start Year: %(start_year)s
 Grant Year: %(grant_year)s
