@@ -10,6 +10,9 @@
 <metal:main fill-slot="content-core">
   <metal:content-core define-macro="content-core">
 
+  <a href="@@rifcs" tal:attributes="href string:${here/absolute_url}/@@rifcs">
+    Download RIF-CS
+  </a>
   <!-- Descriptions -->
   <div id="dataset-description-text" class="dataset-section">
       <h3>Description</h3>
